Add a way to resolve question reports
